--- a/css/index.css
+++ b/css/index.css
@@ -7,6 +7,9 @@
     @media (prefers-color-scheme: dark) {
         background-image: url("../images/woa_logo_only_light.svg");
     }
+    @media (max-width: 600px){
+      height: 262px;
+    }
 }
 
 #woa_words {
@@ -18,6 +21,9 @@
     height: 200px;
     @media (prefers-color-scheme: dark) {
         background-image: url("../images/WizardOfArcWordLogoDarkMode.svg");
+    }
+    @media (max-width: 600px){
+      height: 99px;
     }
 }
 
